--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends "_base.html" %}
 
 {% block content %}
     <div class="section jumbotron row">
@@ -46,7 +46,8 @@
                 Ce site référence automatiquement les acteurs porteurs de solutions, qu’ils soient ou non membres
                 de Syntec Numérique. Il est mis à jour en continu.<br />
                 Le référencement est créé sur la base des éléments fournis par l’entreprise proposant sa solution.
-                Il n’est pas exhaustif. Syntec Numérique ne vérifie ni ne garantit la qualité des solutions des
+                Il n’est pas exhaustif.<br />
+                Syntec Numérique ne vérifie ni ne garantit la qualité des solutions des
                 entreprises et ne peut en aucun cas voir sa responsabilité engagée au titre des prestations proposées
                 par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
                 prestataire et n’est en aucun cas prescripteur des entreprises référencées.
