--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,8 @@
 {% block content %}
     <form method="get" action="" class="mb-3">
         <div class="input-group">
-            <input name="q" type="text" class="form-control" placeholder="Rechercher" value="{{ request.args.q }}">
+            <input id="search" name="q" type="text" class="form-control"
+                   placeholder="Rechercher" value="{{ request.args.q }}">
             <div class="input-group-append">
                 <button class="btn btn-secondary" type="submit">
                     <i class="fa fa-search"></i>
@@ -12,4 +13,12 @@
         </div>
     </form>
     {% include "_startups.html" %}
+{% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        $('#search').focus().select();
+    });
+</script>
 {% endblock %}
