--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,6 @@
 {% extends "_base.html" %}
 
 {% block content %}
+    {% include "_search.html" %}
     {% include "_startups.html" %}
 {% endblock %}
