--- a/templates/search.html
+++ b/templates/search.html
@@ -1,24 +1,6 @@
 {% extends "_base.html" %}
 
 {% block content %}
-    <form method="get" action="" class="mb-3">
-        <div class="input-group">
-            <input id="search" name="q" type="text" class="form-control"
-                   placeholder="Rechercher" value="{{ request.args.q }}">
-            <div class="input-group-append">
-                <button class="btn btn-secondary" type="submit">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
-        </div>
-    </form>
+    {% include "_search.html" %}
     {% include "_startups.html" %}
-{% endblock %}
-
-{% block scripts %}
-<script>
-    $(document).ready(function() {
-        $('#search').focus().select();
-    });
-</script>
 {% endblock %}
