Fixing Safari weird behaviour

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -50,7 +50,7 @@
         {% include "_menu.html" %}
         {% include "_submenu.html" %}
     </header>
-    <main class="d-flex flex-column py-3" role="main">
+    <main class="d-flex flex-column py-3 flex-shrink-0" role="main">
         {% block content %}{% endblock %}
     </main>
     <footer class="footer mt-auto">
