--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="h-100">
+<html lang="fr" class="container-fluid h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,7 +30,7 @@
     <title>Les solutions numériques pour répondre à la crise Covid-19</title>
     <link rel="stylesheet" href="{{ url_for("static", filename="css/bootstrap.min.css") }}">
 </head>
-<body class="container-fluid d-flex flex-column h-100">
+<body class="d-flex flex-column h-100">
     <header class="header">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col text-center py-3">
@@ -57,7 +57,6 @@
         <div class="row">
             <div class="col text-center text-white bg-info py-2">
                 <span class="small">
-                    <i class="fas fa-info-circle"></i>
                     Pour référencer votre offre, un tweet depuis votre compte entreprise à
                     <a class="text-white" href="https://twitter.com/covidsyntecnum" target="_blank">@CovidSyntecNum</a> suffit.
                 </span>
@@ -67,6 +66,10 @@
                     <a href="https://motherbase.ai" target="_blank" class="">
                         <img src="{{ url_for("static", filename="img/motherbase.svg") }}" width="150" alt="Motherbase">
                     </a>
+                </span>
+                <br />
+                <span class="small">
+                    <a class="text-white" href="{{ url_for(".legal") }}">Mentions légales et cookies</a>
                 </span>
             </div>
         </div>
