--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -73,7 +73,7 @@
                     </span>
                 </a>
             </li>
-            <li class="nav-item{% if page == 'sante_pro' %} active{% endif %}">
+            <li class="nav-item{% if page == 'sante-pro' %} active{% endif %}">
                 <a class="nav-link" href="{{ url_for('.getpage', page="sante-pro") }}">
                     <span class="font-weight-bold">Professionnels de Santé</span>
                     <span class="badge badge-light align-top">
